refactor: 메모 전체조회, 삭제 리팩터링